--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 119,
    "metadata": {
     "scrolled": true
    },
@@ -739,7 +739,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,8 @@
     "age_pct = round(age_count/total_players * 100, 2).map(\"{:.2f}%\".format)\n",
     "#age_pct\n",
     "age_demo = pd.DataFrame({\"Total Count\": age_count, \"Percentage of Players\": age_pct})\n",
-    "age_demo"
+    "age_demo\n",
+    "# age_demo_sorted = age_demo.sort_values([age_groups], ascending=False)"
    ]
   },
   {
@@ -797,10 +798,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'DataFrameGroupBy' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-229-f94fda579e46>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[0mage_demo_bins\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mage_demo_bins\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mage_demo_bins\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Age\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m \u001b[0mdf_4\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Age Groups\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mage_demo_bins\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Age Groups\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m \u001b[0mdf_4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'DataFrameGroupBy' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# #establish bins\n",
+    "# age_bins = [0, 9.1, 14.1, 19.1, 24.1, 29.1, 34.1, 39.1, 150]\n",
+    "# labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "\n",
+    "# #sort data into bins\n",
+    "# age_groups = pd.cut(SN_no_dup[\"Age\"], age_bins, labels=labels)\n",
+    "# #age_groups\n",
+    "# # age_groups\n",
+    "# #find count of each age group\n",
+    "# age_count = age_groups.value_counts()\n",
+    "\n",
+    "# #age_count\n",
+    "# #find percentage of each age froup\n",
+    "# age_pct = round(age_count/total_players * 100, 2).map(\"{:.2f}%\".format)\n",
+    "# #age_pct\n",
+    "# age_demo = pd.DataFrame({\"Total Count\": age_count, \"Percentage of Players\": age_pct})\n",
+    "# age_demo\n",
+    "# # age_demo_sorted = age_demo.sort_values([age_groups], ascending=False)\n",
+    "\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# #establish bins\n",
+    "# age_bins = [0, 9.1, 14.1, 19.1, 24.1, 29.1, 34.1, 39.1, 150]\n",
+    "# labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "\n",
+    "# #sort data into bins\n",
+    "# age_groups[\"Age Groups\"] = pd.cut(purchase_data[\"Age\"], age_bins, labels=labels)\n",
+    "\n",
+    "\n",
+    "#working OG code\n",
+    "# group age group by purchase data: Purchase Grouped by Age(PGA)\n",
+    "PGA = purchase_data.groupby(\"Age\")\n",
+    "#PGA = age_groups.groupby(\"Age Groups\")\n",
+    "PGA\n",
+    "\n",
+    "PGA_bins = pd.cut(purchase_data[\"Age\"], age_bins, labels=labels)\n",
+    "\n",
+    "# Count purchases by age group\n",
+    "purchase_count_age = PGA[\"Purchase ID\"].count()\n",
+    "#purchase_count_age\n",
+    "\n",
+    "\n",
+    "# find average purchase price by age group \n",
+    "avg_purchase_price_age = PGA[\"Price\"].mean()\n",
+    "avg_purchase_price_age\n",
+    "\n",
+    "\n",
+    "# find total purchase value by age group \n",
+    "total_purchase_value = PGA[\"Price\"].sum()\n",
+    "total_purchase_value\n",
+    "# find the average purchase per person in the age group \n",
+    "\n",
+    "avg_purchase_per_person_age = total_purchase_value/total_players\n",
+    "avg_purchase_per_person_age\n",
+    "# make a dataframe\n",
+    "age_demographics = pd.DataFrame({\"Purchase Count\": purchase_count_age,\n",
+    "                                  \"Average Purchase Price\": avg_purchase_price_age,\n",
+    "                                  \"Total Purchase Value\":total_purchase_value,\n",
+    "                                  \"Average Purchase Total per Person\": avg_purchase_per_person_age})\n",
+    "\n",
+    "#age_demographics\n",
+    "age_bins = [0, 9.1, 14.1, 19.1, 24.1, 29.1, 34.1, 39.1, 150]\n",
+    "labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "age_demo_bins = age_demographics\n",
+    "age_demo_bins[\"Age Groups\"] = pd.cut(age_demographics.index, age_bins, labels=labels)\n",
+    "age_demo_bins = age_demo_bins.reset_index()\n",
+    "del age_demo_bins[\"Age\"]\n",
+    "df_4[\"Age Groups\"] = age_demo_bins.groupby(\"Age Groups\")\n",
+    "df_4\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -840,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -880,47 +964,47 @@
        "      <th>Lisosia93</th>\n",
        "      <td>5</td>\n",
        "      <td>$3.79</td>\n",
-       "      <td>18.96</td>\n",
+       "      <td>$18.96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Idastidru52</th>\n",
        "      <td>4</td>\n",
        "      <td>$3.86</td>\n",
-       "      <td>15.45</td>\n",
+       "      <td>$15.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Chamjask73</th>\n",
        "      <td>3</td>\n",
        "      <td>$4.61</td>\n",
-       "      <td>13.83</td>\n",
+       "      <td>$13.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Iral74</th>\n",
        "      <td>4</td>\n",
        "      <td>$3.40</td>\n",
-       "      <td>13.62</td>\n",
+       "      <td>$13.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Iskadarya95</th>\n",
        "      <td>3</td>\n",
        "      <td>$4.37</td>\n",
-       "      <td>13.10</td>\n",
+       "      <td>$13.10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Purchase Count Average Purchase Price  Total Purchase Value\n",
-       "SN                                                                      \n",
-       "Lisosia93                 5                  $3.79                 18.96\n",
-       "Idastidru52               4                  $3.86                 15.45\n",
-       "Chamjask73                3                  $4.61                 13.83\n",
-       "Iral74                    4                  $3.40                 13.62\n",
-       "Iskadarya95               3                  $4.37                 13.10"
+       "             Purchase Count Average Purchase Price Total Purchase Value\n",
+       "SN                                                                     \n",
+       "Lisosia93                 5                  $3.79               $18.96\n",
+       "Idastidru52               4                  $3.86               $15.45\n",
+       "Chamjask73                3                  $4.61               $13.83\n",
+       "Iral74                    4                  $3.40               $13.62\n",
+       "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +1022,10 @@
     "top_spenders = pd.DataFrame({\"Purchase Count\": purchase_count, \"Average Purchase Price\": avg_purchase_price, \"Total Purchase Value\": purchase_total_value})\n",
     "#sort dataframe\n",
     "top_spenders_sorted = top_spenders.sort_values([\"Total Purchase Value\"], ascending=False).head()\n",
-    "top_spenders_sorted"
+    "top_spenders_sorted[\"Total Purchase Value\"] = top_spenders_sorted[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "# # purchase_total_value.max()\n",
+    "# avg_purchase_price\n",
+    "top_spenders_sorted\n"
    ]
   },
   {
@@ -982,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1172,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,10 +1194,11 @@
     "item_price = purchase_value/purchase_count\n",
     "\n",
     "#make dataframe\n",
-    "popular_items_df = pd.DataFrame({\"Purchase Count\": purchase_count,\"Item Price\": item_price.map(\"${:.2f}\".format), \"Total Purchase Value\": purchase_value.map(\"${:.2f}\".format)})\n",
+    "popular_items_df = pd.DataFrame({\"Purchase Count\": purchase_count,\"Item Price\": item_price.map(\"${:.2f}\".format), \"Total Purchase Value\": purchase_value})\n",
     "#sort dataframe\n",
     "popular_items_df_sorted = popular_items_df.sort_values([\"Purchase Count\"], ascending=False).head()\n",
-    "popular_items_df_sorted"
+    "popular_items_df_sorted[\"Total Purchase Value\"] = popular_items_df_sorted[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "popular_items_df_sorted\n"
    ]
   },
   {
@@ -1136,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 208,
    "metadata": {
     "scrolled": false
    },
@@ -1177,72 +1265,79 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <th>Stormfury Mace</th>\n",
-       "      <td>2</td>\n",
-       "      <td>$4.99</td>\n",
-       "      <td>$9.98</td>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$59.99</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>139</th>\n",
-       "      <th>Mercy, Katana of Dismay</th>\n",
-       "      <td>5</td>\n",
-       "      <td>$4.94</td>\n",
-       "      <td>$24.70</td>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <th>Stormfury Longsword</th>\n",
-       "      <td>2</td>\n",
-       "      <td>$4.93</td>\n",
-       "      <td>$9.86</td>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>$44.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <th>Hellreaver, Heirloom of Inception</th>\n",
-       "      <td>3</td>\n",
-       "      <td>$4.93</td>\n",
-       "      <td>$14.79</td>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <th>Blazeguard, Reach of Eternity</th>\n",
-       "      <td>5</td>\n",
-       "      <td>$4.91</td>\n",
-       "      <td>$24.55</td>\n",
+       "      <th>103</th>\n",
+       "      <th>Singed Scalpel</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.35</td>\n",
+       "      <td>$34.80</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           Purchase Count Item Price  \\\n",
+       "                                                      Purchase Count  \\\n",
        "Item ID Item Name                                                      \n",
-       "63      Stormfury Mace                                  2      $4.99   \n",
-       "139     Mercy, Katana of Dismay                         5      $4.94   \n",
-       "173     Stormfury Longsword                             2      $4.93   \n",
-       "147     Hellreaver, Heirloom of Inception               3      $4.93   \n",
-       "128     Blazeguard, Reach of Eternity                   5      $4.91   \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "103     Singed Scalpel                                             8   \n",
        "\n",
-       "                                          Total Purchase Value  \n",
-       "Item ID Item Name                                               \n",
-       "63      Stormfury Mace                                   $9.98  \n",
-       "139     Mercy, Katana of Dismay                         $24.70  \n",
-       "173     Stormfury Longsword                              $9.86  \n",
-       "147     Hellreaver, Heirloom of Inception               $14.79  \n",
-       "128     Blazeguard, Reach of Eternity                   $24.55  "
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                      $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "82      Nirvana                                           $4.90   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "103     Singed Scalpel                                    $4.35   \n",
+       "\n",
+       "                                                     Total Purchase Value  \n",
+       "Item ID Item Name                                                          \n",
+       "92      Final Critic                                               $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "82      Nirvana                                                    $44.10  \n",
+       "145     Fiery Glass Crusader                                       $41.22  \n",
+       "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "popular_items_df_profitable = popular_items_df.sort_values([\"Item Price\"], ascending=False)\n",
-    "popular_items_df_profitable.head()\n",
-    "#popular_items_df.sort_values([\"Total Purchase Value\"], ascending=False).head()\n",
-    "# popular_items_df.sort_values([\"Item Price\"], ascending=False)"
+    "popular_items_df_profitable = popular_items_df.sort_values(\"Total Purchase Value\", ascending=False)\n",
+    "popular_items_df_profitable[\"Total Purchase Value\"] = popular_items_df_profitable[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "popular_items_df_profitable.head()"
    ]
   },
   {
