--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -176,7 +176,7 @@
        "9               Ghastly Adamantite Protector   3.58  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -264,7 +264,7 @@
        "0            576"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "scrolled": false
    },
@@ -338,20 +338,20 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>179</td>\n",
-       "      <td>3.05</td>\n",
+       "      <td>$3.05</td>\n",
        "      <td>780</td>\n",
-       "      <td>2379.77</td>\n",
+       "      <td>$2379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Number of Unique Items  Average Price  Number of Purchases  Total Revenue\n",
-       "0                     179           3.05                  780        2379.77"
+       "   Number of Unique Items Average Price  Number of Purchases Total Revenue\n",
+       "0                     179         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,8 +371,8 @@
     "                           \"Average Price\":[avg_price], \n",
     "                           \"Number of Purchases\": [num_purchases], \n",
     "                           \"Total Revenue\": [total_revenue]})\n",
-    "\n",
-    "\n",
+    "PurchasingAnalysis_df[\"Average Price\"] = PurchasingAnalysis_df[\"Average Price\"].map(\"${:.2f}\".format) \n",
+    "PurchasingAnalysis_df[\"Total Revenue\"] = PurchasingAnalysis_df[\"Total Revenue\"].map(\"${:.2f}\".format) \n",
     "\n",
     "PurchasingAnalysis_df"
    ]
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -443,7 +443,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -739,7 +739,7 @@
        "40+             12                 2.08%"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,92 +798,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'DataFrameGroupBy' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-229-f94fda579e46>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[0mage_demo_bins\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mage_demo_bins\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mage_demo_bins\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Age\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m \u001b[0mdf_4\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Age Groups\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mage_demo_bins\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Age Groups\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m \u001b[0mdf_4\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'DataFrameGroupBy' object does not support item assignment"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Average Purchase Total per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Group</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>23</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$77.13</td>\n",
+       "      <td>$4.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>28</td>\n",
+       "      <td>$2.96</td>\n",
+       "      <td>$82.78</td>\n",
+       "      <td>$3.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>136</td>\n",
+       "      <td>$3.04</td>\n",
+       "      <td>$412.89</td>\n",
+       "      <td>$3.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>365</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>$1114.06</td>\n",
+       "      <td>$4.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>101</td>\n",
+       "      <td>$2.90</td>\n",
+       "      <td>$293.00</td>\n",
+       "      <td>$3.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>73</td>\n",
+       "      <td>$2.93</td>\n",
+       "      <td>$214.00</td>\n",
+       "      <td>$4.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>41</td>\n",
+       "      <td>$3.60</td>\n",
+       "      <td>$147.67</td>\n",
+       "      <td>$4.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$2.94</td>\n",
+       "      <td>$38.24</td>\n",
+       "      <td>$3.19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Purchase Count Average Purchase Price Total Purchase Value  \\\n",
+       "Age Group                                                               \n",
+       "<10                    23                  $3.35               $77.13   \n",
+       "10-14                  28                  $2.96               $82.78   \n",
+       "15-19                 136                  $3.04              $412.89   \n",
+       "20-24                 365                  $3.05             $1114.06   \n",
+       "25-29                 101                  $2.90              $293.00   \n",
+       "30-34                  73                  $2.93              $214.00   \n",
+       "35-39                  41                  $3.60              $147.67   \n",
+       "40+                    13                  $2.94               $38.24   \n",
+       "\n",
+       "          Average Purchase Total per Person  \n",
+       "Age Group                                    \n",
+       "<10                                   $4.54  \n",
+       "10-14                                 $3.76  \n",
+       "15-19                                 $3.86  \n",
+       "20-24                                 $4.32  \n",
+       "25-29                                 $3.81  \n",
+       "30-34                                 $4.12  \n",
+       "35-39                                 $4.76  \n",
+       "40+                                   $3.19  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# #establish bins\n",
-    "# age_bins = [0, 9.1, 14.1, 19.1, 24.1, 29.1, 34.1, 39.1, 150]\n",
-    "# labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
+    "# Establish bins for ages\n",
+    "age_bins = [0, 9.1, 14.1, 19.1, 24.1, 29.1, 34.1, 39.1, 150]\n",
+    "labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
     "\n",
-    "# #sort data into bins\n",
-    "# age_groups = pd.cut(SN_no_dup[\"Age\"], age_bins, labels=labels)\n",
-    "# #age_groups\n",
-    "# # age_groups\n",
-    "# #find count of each age group\n",
-    "# age_count = age_groups.value_counts()\n",
-    "\n",
-    "# #age_count\n",
-    "# #find percentage of each age froup\n",
-    "# age_pct = round(age_count/total_players * 100, 2).map(\"{:.2f}%\".format)\n",
-    "# #age_pct\n",
-    "# age_demo = pd.DataFrame({\"Total Count\": age_count, \"Percentage of Players\": age_pct})\n",
-    "# age_demo\n",
-    "# # age_demo_sorted = age_demo.sort_values([age_groups], ascending=False)\n",
-    "\n",
-    "#\n",
-    "#\n",
-    "#\n",
-    "# #establish bins\n",
-    "# age_bins = [0, 9.1, 14.1, 19.1, 24.1, 29.1, 34.1, 39.1, 150]\n",
-    "# labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
-    "\n",
-    "# #sort data into bins\n",
-    "# age_groups[\"Age Groups\"] = pd.cut(purchase_data[\"Age\"], age_bins, labels=labels)\n",
+    "# Segment and sort age values into bins established above\n",
+    "purchase_data[\"Age Group\"] = pd.cut(purchase_data[\"Age\"],age_bins, labels=labels)\n",
     "\n",
     "\n",
-    "#working OG code\n",
-    "# group age group by purchase data: Purchase Grouped by Age(PGA)\n",
-    "PGA = purchase_data.groupby(\"Age\")\n",
-    "#PGA = age_groups.groupby(\"Age Groups\")\n",
-    "PGA\n",
+    "#put age groups into bins\n",
+    "age_groups_3 = purchase_data.groupby(\"Age Group\")\n",
     "\n",
-    "PGA_bins = pd.cut(purchase_data[\"Age\"], age_bins, labels=labels)\n",
+    "# count total players by age\n",
+    "total_age_count= age_groups_3[\"SN\"].nunique()\n",
+    "\n",
     "\n",
     "# Count purchases by age group\n",
-    "purchase_count_age = PGA[\"Purchase ID\"].count()\n",
+    "purchase_count_age = age_groups_3[\"Purchase ID\"].count()\n",
     "#purchase_count_age\n",
     "\n",
     "\n",
     "# find average purchase price by age group \n",
-    "avg_purchase_price_age = PGA[\"Price\"].mean()\n",
+    "avg_purchase_price_age = round(age_groups_3[\"Price\"].mean(), 2)\n",
     "avg_purchase_price_age\n",
     "\n",
     "\n",
     "# find total purchase value by age group \n",
-    "total_purchase_value = PGA[\"Price\"].sum()\n",
+    "total_purchase_value = age_groups_3[\"Price\"].sum()\n",
     "total_purchase_value\n",
     "# find the average purchase per person in the age group \n",
     "\n",
-    "avg_purchase_per_person_age = total_purchase_value/total_players\n",
+    "avg_purchase_per_person_age = round(total_purchase_value/total_age_count, 2)\n",
+    "\n",
     "avg_purchase_per_person_age\n",
     "# make a dataframe\n",
     "age_demographics = pd.DataFrame({\"Purchase Count\": purchase_count_age,\n",
     "                                  \"Average Purchase Price\": avg_purchase_price_age,\n",
     "                                  \"Total Purchase Value\":total_purchase_value,\n",
     "                                  \"Average Purchase Total per Person\": avg_purchase_per_person_age})\n",
-    "\n",
-    "#age_demographics\n",
-    "age_bins = [0, 9.1, 14.1, 19.1, 24.1, 29.1, 34.1, 39.1, 150]\n",
-    "labels = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
-    "age_demo_bins = age_demographics\n",
-    "age_demo_bins[\"Age Groups\"] = pd.cut(age_demographics.index, age_bins, labels=labels)\n",
-    "age_demo_bins = age_demo_bins.reset_index()\n",
-    "del age_demo_bins[\"Age\"]\n",
-    "df_4[\"Age Groups\"] = age_demo_bins.groupby(\"Age Groups\")\n",
-    "df_4\n"
+    "#convert to currency format\n",
+    "age_demographics[\"Average Purchase Price\"] = age_demographics[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
+    "age_demographics[\"Total Purchase Value\"] = age_demographics[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "age_demographics[\"Average Purchase Total per Person\"] = age_demographics[\"Average Purchase Total per Person\"].map(\"${:.2f}\".format)\n",
+    "age_demographics\n"
    ]
   },
   {
